[package]
name = "line_drawing"
version = "1.0.0"
authors = ["Expenses <expenses@airmail.cc>"]
description = "A collection of line-drawing algorithms for use in graphics and video games."
repository = "https://github.com/expenses/line_drawing"
documentation = "https://docs.rs/line_drawing"
license = "MIT"
categories = ["algorithms", "games"]
keywords = ["line", "drawing", "bresenham", "sight", "game"]
readme = "README.md"


[dependencies]
num-traits = "0.2"

[dev-dependencies]
bresenham = "0.1.1"
image = { version = "0.23.14", default-features = false, features = ["png"] }
rand = "0.8.3"
